--- a/LoginTransition/Assets/Style/index.css
+++ b/LoginTransition/Assets/Style/index.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 :root {
-  --black: #000;
-  --white: #fff;
+  --black: #fff;
+  --white: #292929;
+  --black2: #000;
+  --white2: #fff;
   --background1: #FF574D;
   --background2: #FF556C;
   --inputColor: #F2EEF4;
+  --darkness: rgba(0, 0, 0, 0.342);
   --font_first: "Montserrat", sans-serif;
   --font_second: "Inter", sans-serif;
 }
@@ -22,14 +25,67 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--white);
+  color: var(--black);
+  transition: all 0.4s ease-in-out;
 }
+body div#container_btn_theme {
+  width: 90px;
+  height: 30px;
+  background-color: var(--white);
+  border-radius: 10px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  border: 1px solid var(--background2);
+  transition: all 0.4s ease-in-out;
+}
+body div#container_btn_theme div#container_icon_theme {
+  width: 30px;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+  transition: left 0.6s ease-in-out;
+  left: 0;
+}
+body div#container_btn_theme div#container_icon_theme.Dark_Active {
+  left: calc(100% - 30px);
+  animation: 0.6s animationBtn ease-in-out;
+}
+body div#container_btn_theme div#container_icon_theme.Light_Active {
+  animation: 0.6s animationBtn2 ease-in-out;
+}
+@keyframes animationBtn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes animationBtn2 {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+body div#container_btn_theme div#container_icon_theme img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@keyframes identifier {}
 body main {
   width: 95%;
   max-width: 1000px;
   height: 600px;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 10px;
-  box-shadow: -2px 10px 15px rgba(0, 0, 0, 0.342);
+  box-shadow: -2px 10px 15px var(--darkness);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -63,7 +119,7 @@ body main div#background_orange div#container_background_orange {
 }
 body main div#background_orange div#container_background_orange section {
   width: 90%;
-  color: var(--white);
+  color: var(--white2);
   text-align: center;
   background-color: transparent;
   position: relative;
@@ -71,9 +127,9 @@ body main div#background_orange div#container_background_orange section {
 body main div#background_orange div#container_background_orange section button {
   width: auto;
   padding: 15px 20px;
-  color: var(--white);
+  color: var(--white2);
   background: transparent;
-  border: 1px solid var(--white);
+  border: 1px solid var(--white2);
   cursor: pointer;
   border-radius: 20px;
   margin: 30px auto;
@@ -84,6 +140,7 @@ body main div.bakground_sections {
   position: absolute;
   z-index: 1;
   background-color: var(--white);
+  transition: all 0.4s ease-in-out;
 }
 body main div.bakground_sections#background_signIn {
   z-index: 2;
@@ -135,7 +192,7 @@ body main section form p {
 body main section form button {
   width: auto;
   padding: 15px 20px;
-  color: var(--white);
+  color: var(--white2);
   background-image: linear-gradient(var(--background1), var(--background2));
   border: none;
   cursor: pointer;
