--- a/LoginTransition/Assets/Style/index.scss
+++ b/LoginTransition/Assets/Style/index.scss
@@ -2,11 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --black: #000;
-    --white: #fff;
+    --black: #fff;
+    --white: #292929;
+    
+    // --black: #000;
+    --black2: #000;
+    // --white: #fff;
+    --white2: #fff;
     --background1: #FF574D;
     --background2: #FF556C;
     --inputColor: #F2EEF4;
+    --darkness: rgba(0, 0, 0, 0.342);
 
     //? Fontes
     --font_first: 'Montserrat', sans-serif;
@@ -25,14 +31,78 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--white);
+    color: var(--black);
+    transition: all 0.4s ease-in-out;
+
+    div#container_btn_theme {
+        width: 90px;
+        height: 30px;
+        background-color: var(--white);
+        border-radius: 10px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        border: 1px solid var(--background2);
+        transition: all 0.4s ease-in-out;
+
+        div#container_icon_theme {
+            width: 30px;
+            height: 100%;
+            border-radius: 50%;
+            position: absolute;
+            transition: left 0.6s ease-in-out;
+            left: 0;
+
+            &.Dark_Active {
+                left: calc(100% - 30px);
+                animation: 0.6s animationBtn ease-in-out;
+            }
+
+            &.Light_Active {
+                animation: 0.6s animationBtn2 ease-in-out;
+            }
+
+            @keyframes animationBtn {
+                0% {
+                    transform: rotate(0deg);
+                }
+
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            @keyframes animationBtn2 {
+                0% {
+                    transform: rotate(360deg);
+                }
+
+                100% {
+                    transform: rotate(-0deg);
+                }
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+
+            @keyframes identifier {
+                
+            }
+        }
+    }
 
     main {
         width: 95%;
         max-width: 1000px;
         height: 600px;
-        background-color: #fff;
+        background-color: var(--white);
         border-radius: 10px;
-        box-shadow: -2px 10px 15px rgba(0, 0, 0, 0.342);
+        box-shadow: -2px 10px 15px var(--darkness);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -68,7 +138,7 @@ body {
 
                 section {
                     width: 90%;
-                    color: var(--white);
+                    color: var(--white2);
                     text-align: center;
                     background-color: transparent;
                     position: relative;
@@ -80,9 +150,9 @@ body {
                     button {
                         width: auto;
                         padding: 15px 20px;
-                        color: var(--white);
+                        color: var(--white2);
                         background: transparent;
-                        border: 1px solid var(--white);
+                        border: 1px solid var(--white2);
                         cursor: pointer;
                         border-radius: 20px;
                         margin: 30px auto;
@@ -97,6 +167,7 @@ body {
             position: absolute;
             z-index: 1;
             background-color: var(--white);
+            transition: all 0.4s ease-in-out;
 
             &#background_signIn {
                 z-index: 2;
@@ -157,7 +228,7 @@ body {
                 button {
                     width: auto;
                     padding: 15px 20px;
-                    color: var(--white);
+                    color: var(--white2);
                     background-image: linear-gradient(var(--background1), var(--background2));
                     border: none;
                     cursor: pointer;
